--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-redux": "^6.0.0",
+    "react-router": "^5.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
@@ -43,7 +44,7 @@
     "eslint-plugin-react-hooks": "0.0.0",
     "koa": "^2.6.2",
     "less": "^3.9.0",
-    "parcel": "^1.11.0",
+    "parcel": "^1.12.3",
     "rimraf": "^2.6.3",
     "typescript": "^3.2.2"
   },
