--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel ./src/index.html"
+    "start": "node start"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/edit-ot/fe.git"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "edit-ot-quill-delta": "^4.2.3",
+    "express": "^4.16.4",
     "fast-diff": "^1.2.0",
+    "http-proxy-middleware": "^0.19.1",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-redux": "^6.0.0",
@@ -44,6 +47,7 @@
     "eslint-plugin-react-hooks": "0.0.0",
     "koa": "^2.6.2",
     "less": "^3.9.0",
+    "md5": "^2.2.1",
     "parcel": "^1.12.3",
     "rimraf": "^2.6.3",
     "typescript": "^3.2.2"
