--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "fast-diff": "^1.2.0",
     "http-proxy-middleware": "^0.19.1",
+    "quill": "^1.3.6",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-redux": "^6.0.0",
@@ -35,6 +36,7 @@
     "@types/fast-diff": "^1.2.0",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.18",
+    "@types/quill": "^2.0.2",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^6.0.11",
