--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@types/md5": "^2.1.33",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "cropperjs": "^1.5.1",
     "edit-ot-quill-delta": "^4.2.3",
     "eventemitter3": "^3.1.0",
     "express": "^4.16.4",
     "fast-diff": "^1.2.0",
+    "fast-json-stable-stringify": "^2.0.0",
     "http-proxy-middleware": "^0.19.1",
     "quill": "^1.3.6",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
+    "react-image-crop": "^7.0.1",
     "react-redux": "^6.0.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^4.3.1",
@@ -38,12 +41,15 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
     "@types/classnames": "^2.2.7",
+    "@types/cropperjs": "^1.1.5",
     "@types/fast-diff": "^1.2.0",
+    "@types/fast-json-stable-stringify": "^2.0.0",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.18",
     "@types/quill": "^2.0.2",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-image-crop": "^6.0.2",
     "@types/react-redux": "^6.0.11",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
